--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     volumes:
       - ./swag-nginx-conf/default:/config/nginx/site-confs/default
       - ./src:/config/personal-website
+      - /home/ubuntu/love-poem:/config/love-poem
     ports:
       - 443:443
       - 80:80
